tests/ui/type-alias-impl-trait/method_resolution2.current.stderr
error[E0599]: no method named `foo` found for struct `Bar<Foo>` in the current scope
  --> $DIR/method_resolution2.rs:17:14
   |
LL | struct Bar<T>(T);
   | ------------- method `foo` not found for this struct
...
LL |         self.foo()
   |              ^^^ method not found in `Bar<Foo>`
   |
   = note: the method was found for
           - `Bar<u32>`

error[E0391]: cycle detected when computing type of opaque `Foo::{opaque#0}`
  --> $DIR/method_resolution2.rs:10:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
   |
note: ...which requires type-checking `<impl at $DIR/method_resolution2.rs:15:1: 15:14>::bar`...
  --> $DIR/method_resolution2.rs:17:9
   |
LL |         self.foo()
   |         ^^^^
   = note: ...which requires evaluating trait selection obligation `Bar<Foo>: core::marker::Unpin`...
   = note: ...which again requires computing type of opaque `Foo::{opaque#0}`, completing the cycle
note: cycle used when computing type of `Foo::{opaque#0}`
  --> $DIR/method_resolution2.rs:10:12
   |
LL | type Foo = impl Sized;
   |            ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0391, E0599.
For more information about an error, try `rustc --explain E0391`.
